--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -4,43 +4,43 @@ versions:
 
     kernel:
       auth:
-        'kernel-auth-service':  'mosipqa/kernel-auth-service:1.2.0.1'
+        'kernel-auth-service':  'technoforte2023/kernel-auth-service:1.2.0.1'
       masterdata:
-        'kernel-masterdata-service': 'mosipqa/kernel-masterdata-service:1.2.0.1'
+        'kernel-masterdata-service': 'technoforte2023/kernel-masterdata-service:1.2.0.1'
       idgen:
-        'kernel-idgenerator-service': 'mosipqa/kernel-idgenerator-service:1.2.0.1'
+        'kernel-idgenerator-service': 'technoforte2023/kernel-idgenerator-service:1.2.0.1'
       prid:
-        'kernel-pridgenerator-service': 'mosipqa/kernel-pridgenerator-service:1.2.0.1'
+        'kernel-pridgenerator-service': 'technoforte2023/kernel-pridgenerator-service:1.2.0.1'
       sync:
-        'kernel-syncdata-service': 'mosipqa/kernel-syncdata-service:1.2.0.1'
+        'kernel-syncdata-service': 'technoforte2023/kernel-syncdata-service:1.2.0.1'
       audit :
-        'kernel-auditmanager-service': 'mosipqa/kernel-auditmanager-service:1.2.0.1'
+        'kernel-auditmanager-service': 'technoforte2023/kernel-auditmanager-service:1.2.0.1'
       key:
-        'kernel-keymanager-service': 'mosipqa/kernel-keymanager-service:1.2.0.1'
+        'kernel-keymanager-service': 'technoforte2023/kernel-keymanager-service:1.2.0.1'
       notifier:
-        'kernel-notification-service': 'mosipqa/kernel-notification-service:1.2.0.1'
+        'kernel-notification-service': 'technoforte2023/kernel-notification-service:1.2.0.1'
       otp:
-        'kernel-otpmanager-service': 'mosipqa/kernel-otpmanager-service:1.2.0.1'
+        'kernel-otpmanager-service': 'technoforte2023/kernel-otpmanager-service:1.2.0.1'
       rid:
-        'kernel-ridgenerator-service': 'mosipqa/kernel-ridgenerator-service:1.2.0.1'
+        'kernel-ridgenerator-service': 'technoforte2023/kernel-ridgenerator-service:1.2.0.1'
       keygen:
-        'kernel-keys-generator': 'mosipqa/keys-generator:1.2.0.1'
+        'kernel-keys-generator': 'technoforte2023/keys-generator:1.2.0.1'
       keymigrator:
-        'keymigrator': 'mosipqa/keys-migrator:1.2.0.1'
+        'keymigrator': 'technoforte2023/keys-migrator:1.2.0.1'
 
     prereg:
       application:
-        'prereg-application-service': 'mosipqa/pre-registration-application-service:1.2.0.1'
+        'prereg-application-service': 'technoforte2023/pre-registration-application-service:1.2.0.1'
       batch:
-        'prereg-batchjob-service': 'mosipqa/pre-registration-batchjob:1.2.0.1'
+        'prereg-batchjob-service': 'technoforte2023/pre-registration-batchjob:1.2.0.1'
       booking:
-        'prereg-booking-service': 'mosipqa/pre-registration-booking-service:1.2.0.1'
+        'prereg-booking-service': 'technoforte2023/pre-registration-booking-service:1.2.0.1'
       datasync:
-        'prereg-datasync-service': 'mosipqa/pre-registration-datasync-service:1.2.0.1'
+        'prereg-datasync-service': 'technoforte2023/pre-registration-datasync-service:1.2.0.1'
       captcha:
-        'prereg-captcha-service': 'mosipqa/pre-registration-captcha-service:1.2.0.1'
+        'prereg-captcha-service': 'technoforte2023/pre-registration-captcha-service:1.2.0.1'
       ui:
-        'prereg-ui': 'mosipqa/pre-registration-ui:1.2.0.1'
+        'prereg-ui': 'technoforte2023/pre-registration-ui:1.2.0.1'
 
     registration_client:
       downloader:
@@ -49,85 +49,85 @@ versions:
 
     regproc:
       group1:
-        'regproc-stage-group-1': 'mosipqa/registration-processor-stage-group-1:1.2.0.1'
+        'regproc-stage-group-1': 'technoforte2023/registration-processor-stage-group-1:1.2.0.1'
       group2:
-        'regproc-stage-group-2': 'mosipqa/registration-processor-stage-group-2:1.2.0.1'
+        'regproc-stage-group-2': 'technoforte2023/registration-processor-stage-group-2:1.2.0.1'
       group3:
-        'regproc-stage-group-3': 'mosipqa/registration-processor-stage-group-3:1.2.0.1'
+        'regproc-stage-group-3': 'technoforte2023/registration-processor-stage-group-3:1.2.0.1'
       group4:
-        'regproc-stage-group-4': 'mosipqa/registration-processor-stage-group-4:1.2.0.1'
+        'regproc-stage-group-4': 'technoforte2023/registration-processor-stage-group-4:1.2.0.1'
       group5:
         'regproc-stage-group-5': 'mosipqa/registration-processor-stage-group-5:1.2.0.1'
       group6:
-        'regproc-stage-group-6': 'mosipqa/registration-processor-stage-group-6:1.2.0.1'
+        'regproc-stage-group-6': 'technoforte2023/registration-processor-stage-group-6:1.2.0.1'
       group7:
-        'regproc-stage-group-7': 'mosipqa/registration-processor-stage-group-7:1.2.0.1'
+        'regproc-stage-group-7': 'technoforte2023/registration-processor-stage-group-7:1.2.0.1'
       camel:
-        'regproc-camel-stage': 'mosipqa/registration-processor-common-camel-bridge:1.2.0.1'
+        'regproc-camel-stage': 'technoforte2023/registration-processor-common-camel-bridge:1.2.0.1'
       trans:
-        'regproc-registration-transaction-service': 'mosipqa/registration-processor-registration-transaction-service:1.2.0.1'
+        'regproc-registration-transaction-service': 'technoforte2023/registration-processor-registration-transaction-service:1.2.0.1'
       reprocess:
-        'regproc-reprocessor': 'mosipqa/registration-processor-reprocessor:1.2.0.1'
+        'regproc-reprocessor': 'technoforte2023/registration-processor-reprocessor:1.2.0.1'
       notificationService:
-        'regproc-notification-service': 'mosipqa/registration-processor-notification-service:1.2.0.1'
+        'regproc-notification-service': 'technoforte2023/registration-processor-notification-service:1.2.0.1'
       salt:
-        'regproc-salt-generator': 'mosipqa/kernel-salt-generator:1.2.0.1'
+        'regproc-salt-generator': 'technoforte2023/kernel-salt-generator:1.2.0.1'
       workflow:
-        'regproc-workflowmanager': 'mosipqa/registration-processor-workflow-manager-service:1.2.0.1'
+        'regproc-workflowmanager': 'technoforte2023/registration-processor-workflow-manager-service:1.2.0.1'
 
     dmzregproc:
       group1:
-        'regproc-stage-group-1': 'mosipqa/registration-processor-stage-group-1:1.2.0.1'
+        'regproc-stage-group-1': 'technoforte2023/registration-processor-stage-group-1:1.2.0.1'
       camel:
-        'regproc-camel-stage': 'mosipqa/registration-processor-common-camel-bridge:1.2.0.1'
+        'regproc-camel-stage': 'technoforte2023/registration-processor-common-camel-bridge:1.2.0.1'
       status:
-        'regproc-registration-status-service': 'mosipqa/registration-processor-registration-status-service:1.2.0.1'
+        'regproc-registration-status-service': 'technoforte2023/registration-processor-registration-status-service:1.2.0.1'
       pktserver:
-        'regproc-dmz-packet-server': 'mosipqa/registration-processor-dmz-packet-server:1.0.9'
+        'regproc-dmz-packet-server': 'technoforte2023/registration-processor-dmz-packet-server:1.0.9'
 
     ida:
       auth:
-        'ida-auth-service': 'mosipqa/authentication-service:1.2.0.1'
+        'ida-auth-service': 'technoforte2023/authentication-service:1.2.0.1'
       internal:
-        'ida-internal-service': 'mosipqa/authentication-internal-service:1.2.0.1'
+        'ida-internal-service': 'technoforte2023/authentication-internal-service:1.2.0.1'
       otp:
-        'ida-otp-service': 'mosipqa/authentication-otp-service:1.2.0.1'
+        'ida-otp-service': 'technoforte2023/authentication-otp-service:1.2.0.1'
       keygen:
-        'ida-key-generator': 'mosipqa/keys-generator:1.2.0.1'
+        'ida-key-generator': 'technoforte2023/keys-generator:1.2.0.1'
 
     idrepo:
       identity:
-        'idrepo-identity-service': 'mosipqa/id-repository-identity-service:1.2.0.1'
+        'idrepo-identity-service': 'technoforte2023/id-repository-identity-service:1.2.0.1'
       vid:
-        'idrepo-vid-service': 'mosipqa/id-repository-vid-service:1.2.0.1'
+        'idrepo-vid-service': 'technoforte2023/id-repository-vid-service:1.2.0.1'
       credentialreq:
-        'idrepo-credential-request-generator': 'mosipqa/credential-request-generator:1.2.0.1'
+        'idrepo-credential-request-generator': 'technoforte2023/credential-request-generator:1.2.0.1'
       credentialservice:
-        'idrepo-credential-service': 'mosipqa/credential-service:1.2.0.1'
+        'idrepo-credential-service': 'technoforte2023/credential-service:1.2.0.1'
       salt:
-        'idrepo-salt-generator': 'mosipqa/id-repository-salt-generator:1.2.0.1'
+        'idrepo-salt-generator': 'technoforte2023/id-repository-salt-generator:1.2.0.1'
       feeder:
-        'idrepo-credential-feeder': 'mosipqa/id-repository-credentials-feeder:1.2.0.1'
+        'idrepo-credential-feeder': 'technoforte2023/id-repository-credentials-feeder:1.2.0.1'
 
     pms:
       partner:
-        'pms-partner-manager-service': 'mosipqa/partner-management-service:1.2.0.1'
+        'pms-partner-manager-service': 'technoforte2023/partner-management-service:1.2.0.1'
       policy:
-        'pms-policy-manager-service': 'mosipqa/policy-management-service:1.2.0.1'
+        'pms-policy-manager-service': 'technoforte2023/policy-management-service:1.2.0.1'
       ui:
-        'pms-ui': 'mosipqa/pmp-ui:1.2.0.1'
+        'pms-ui': 'technoforte2023/pmp-ui:1.2.0.1'
 
     resident:
       resident:
-        'resident-service': 'mosipqa/resident-service:1.2.0.1'
+        'resident-service': 'technoforte2023/resident-service:1.2.0.1'
 
     admin:
       service:
-        'admin-service': 'mosipqa/admin-service:1.2.0.1'
+        'admin-service': 'technoforte2023/admin-service:1.2.0.1'
       ui:
-        'admin-ui': 'mosipqa/admin-ui:1.2.0.1'
+        'admin-ui': 'technoforte2023/admin-ui:1.2.0.1'
       hotlist:
-        'admin-hotlist-service': 'mosipqa/hotlist-service:1.2.0.1'
+        'admin-hotlist-service': 'technoforte2023/hotlist-service:1.2.0.1'
 
     packetmanager:
       service:
@@ -158,7 +158,7 @@ versions:
 
     artifactory:
       service:
-        'artifactory-service': 'mosipqa/artifactory-server:1.2.0.1'
+        'artifactory-service': 'technoforte2023/artifactory-server:1.2.0.1'
 
     keycloak:
       service:
